# grain_growth

./: CMakeLists.txt  inputData  outputData
inc/: Board.hpp  FileParser.hpp  Simulation.hpp  globals.hpp
src/: Board.cpp  FileParser.cpp  Simulation.cpp  main.cpp
